--- a/src/components/Carousel/index.css
+++ b/src/components/Carousel/index.css
@@ -14,6 +14,7 @@
 
 .carousel-slide {
   width: 100%;
+  height: 400px;
   display: none;
   transition: transform 0.3s;
 }
@@ -25,6 +26,7 @@
 
 img {
   width: 100%;
+  height: 100%;
 }
 
 .prev-button,
